--- a/trade.html
+++ b/trade.html
@@ -21,11 +21,11 @@
     ]
   ],
   "chartOnly": false,
-  "width": 550,
-  "height": 400,
+  "width": "100%",
+  "height": "100%",
   "locale": "en",
-  "colorTheme": "light",
-  "autosize": false,
+  "colorTheme": "dark",
+  "autosize": true,
   "showVolume": false,
   "showMA": false,
   "hideDateRanges": false,
