--- a/trade.html
+++ b/trade.html
@@ -11,13 +11,19 @@
   {
   "symbols": [
     [
+      "FX_IDC:CNHTHB|1D"
+    ],
+    [
       "SSE:601288|1M"
     ],
     [
-      "FX_IDC:CNHTHB|1M"
+      "SSE:600938|1M"
     ],
     [
-      "HKEX:700|1M"
+      "NASDAQ:AAPL|1D"
+    ],
+    [
+      "NASDAQ:NVDA|1D"
     ]
   ],
   "chartOnly": false,
